--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="30dp"
-        tools:context=".MainActivity">
+        tools:context="kotlinforandroid.book.numberguess.MainActivity">
 
     <TextView
             android:layout_width="wrap_content"
